Черновик второй версии