@@ -5,131 +5,86 @@ import java.util.stream.Collectors;
 
 public class GroupDivider {
 
-    public static List<List<Long[]>> divide(List<Long[]> data) {
+    public static List<List<Float[]>> divide(List<Float[]> data) {
 
-        List<List<Long[]>> result = new LinkedList<>();
+        List<Map<Float, List<Float[]>>> groupsByColumns = findGroupsByColumns(data);
 
-        List<Long[]> haveMatches = findElementsThatHaveMatches(data);
+        GroupManager<Float> groupManager = new GroupManager<>(groupsByColumns);
 
-        List<Long[]> notHaveMatches = data
-                .stream()
-                .filter(it -> !haveMatches.contains(it))
-                .toList();
+        for (int i = 0; i < groupsByColumns.size() - 1; i++) {
+            Map<Float, List<Float[]>> headGroups = groupsByColumns.get(i);
+            for (int j = i + 1; j < groupsByColumns.size(); j++) {
+                Map<Float, List<Float[]>> checkedGroups = groupsByColumns.get(j);
 
-        while (!haveMatches.isEmpty()) {
-            LinkedList<Long[]> group = new LinkedList<>();
+                for (Map.Entry<Float, List<Float[]>> currentGroup : headGroups.entrySet()) {
+                    for (Float[] line : currentGroup.getValue()) {
 
-            Long[] firstElement = haveMatches.get(0);
-            group.add(firstElement);
-            haveMatches.remove(0);
+                        if (!(line.length > j)) {
+                            continue;
+                        }
 
-            LinkedList<Long[]> newElements = new LinkedList<>();
-            newElements.add(firstElement);
-
-            while (!newElements.isEmpty()) {
-
-                LinkedList<Long[]> addedElements = new LinkedList<>();
-
-                Iterator<Long[]> iterator = haveMatches.iterator();
-
-                while (iterator.hasNext()) {
-                    Long[] element = iterator.next();
-                    if (isElementBelongsToGroup(newElements, element)) {
-                        iterator.remove();
-                        group.add(element);
-                        addedElements.add(element);
+                        List<Float[]> groupToConnect = checkedGroups.get(line[j]);
+                        if (groupToConnect != null) {
+                            groupManager.connectGroups(currentGroup.getValue(), i, currentGroup.getKey(), groupToConnect, j, line[j]);
+                            break;
+                        }
                     }
                 }
-
-                newElements = addedElements;
-            }
-
-            result.add(group);
-        }
-
-        result = result
-                .stream()
-                .sorted((list1, list2) -> Integer.compare(list2.size(), list1.size()))
-                .collect(Collectors.toList());
-
-        result.addAll(notHaveMatches
-                .stream()
-                .map(Collections::singletonList)
-                .toList());
-
-        return result;
-    }
-
-    private static boolean isElementBelongsToGroup(
-            LinkedList<Long[]> group,
-            Long[] element
-    ) {
-
-        for (Long[] groupElement : group) {
-            if (isLinesHaveSameNumbers(groupElement, element)) {
-                return true;
             }
         }
-
-        return false;
+        return groupManager.result();
     }
 
-    private static boolean isLinesHaveSameNumbers(Long[] line1, Long[] line2) {
-        int n = Math.min(line1.length, line2.length);
-
-        for (int i = 0; i < n; i++) {
-            if (line1[i] != 0 && line2[i] != 0 && line1[i].equals(line2[i])) {
-                return true;
-            }
-        }
-
-        return false;
+    private static int findMaxLength(List<Float[]> data) {
+        return data.stream()
+                .max(Comparator.comparingInt(it -> it.length))
+                .orElse(new Float[0])
+                .length;
     }
 
-    private static List<Long[]> findElementsThatHaveMatches(List<Long[]> data) {
-
+    public static List<Map<Float, List<Float[]>>> findGroupsByColumns(List<Float[]> data) {
         int maxLength = findMaxLength(data);
 
-        List<Long[]> haveMatches = new ArrayList<>();
+        List<Map<Float, List<Float[]>>> result = new ArrayList<>();
 
         for (int i = 0; i < maxLength; i++) {
             int finalI = i;
-            Long[] currentElements = data.stream()
+            System.out.println("Начало поиска для " + i + " " + System.currentTimeMillis());
+            Float[] currentElements = data.stream()
                     .map(it -> Arrays.stream(it)
                             .skip(finalI)
                             .findFirst()
-                            .orElse(0L)
+                            .orElse(0F)
                     )
-                    .toArray(Long[]::new);
-
-            Set<Long> notHaveCopies = new HashSet<>();
-            Set<Long> hasCopies = new HashSet<>();
-            for (long l : currentElements) {
+                    .toArray(Float[]::new);
+            System.out.println("Конец поиска для " + i + " " + System.currentTimeMillis());
+            Set<Float> notHaveCopies = new HashSet<>();
+            Set<Float> hasCopies = new HashSet<>();
+            for (Float l : currentElements) {
                 if (l != 0 && !notHaveCopies.add(l)) {
                     hasCopies.add(l);
                 }
             }
 
-            haveMatches.addAll(
-                    data.stream()
-                            .filter(s -> Arrays.stream(s)
+            System.out.println("Конец поиска копий для " + i + " " + System.currentTimeMillis());
+
+            Map<Float, List<Float[]>> mapWithMatches = data.stream()
+                    .filter(s -> Arrays.stream(s)
+                            .skip(finalI)
+                            .limit(1)
+                            .anyMatch(hasCopies::contains))
+                    .collect(Collectors.groupingBy(
+                            s -> Arrays.stream(s)
                                     .skip(finalI)
                                     .limit(1)
-                                    .anyMatch(hasCopies::contains))
-                            .toList()
-            );
+                                    .findFirst().orElse(0F),
+                            Collectors.toList()
+                    ));
+
+            if (!mapWithMatches.isEmpty()) {
+                result.add(mapWithMatches);
+            }
         }
-
-        return haveMatches
-                .stream()
-                .distinct()
-                .collect(Collectors.toList());
-    }
-
-    private static int findMaxLength(List<Long[]> data) {
-        return data.stream()
-                .max(Comparator.comparingInt(it -> it.length))
-                .orElse(new Long[0])
-                .length;
+        return result;
     }
 }
